k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logislot-dev
  labels:
    app.kubernetes.io/part-of: logislot
